feat: add UserQueryRepository and UserAssignmentView for user profile queries